2002-01-13  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* common-src/fileheader.h (dumpfile_t): Add blocksize field.
	* common-src/fileheader.h (build_header): Change prototype.
	* common-src/fileheader.c (fh_init): blocksize default to 
	  DISK_BLOCK_BYTES.
	* common-src/fileheader.c (parse_file_header): Parse BLOCKSIZE= line.
	* common-src/fileheader.c (build_header): Remove blocksize parameter, 
	  write the BLOCKSIZE= line.
	* tape-src/tapeio.c: set file.blocksize, Change call to build_header.
	* restore-src/amrestore.c: Ditto.
	* server-src/dumper.c: Ditto.
	* server-src/taper.c: Ditto.
	* server-src/holding.c: Ditto.
	* server-src/chunker.c: Ditto.

2002-01-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/scsi-changer-driver.c (SCSI_ReadElementStatus):
	  set ret to -1.

2002-01-11  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c: Check for dp->todo.

2002-01-07  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Harlan Stenn <Harlan.Stenn@pfcs.com>

	* changer-src/chg-scsi.c: Typo.

2002-01-06  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/Makefile.am: Run `perl -c' on perl script.
	* client-src/Makefile.am: Ditto.
	* dumper-src/Makefile.am: Ditto.
	* server-src/Makefile.am: Ditto.

2002-01-06  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Reported by Geert Uytterhoeven <geert@linux-m68k.org>

	* README: Amanda compile on Linux/m68k.

2002-01-06  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* changer-src/chg-rth.pl.in: Typo. fi -> }.

2002-01-06  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Harlan Stenn <Harlan.Stenn@pfcs.com>

	* changer-src/chg-chio.pl.in: Typo. fi -> }.
	* changer-src/chg-chio.pl.in (prefix, exec_prefix): Set correctly.
	* changer-src/chg-chio.pl.in (max_picker): Init to -1.

2002-01-05  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* recover-src/extract_list.c (okay_to_continue_tape): Ignore \n
	  at end of string.
